# Djangogramm

./: .gitignore  LICENSE  README.md  codewars.py  package-lock.json  package.json  pyproject.toml
djangogramm/: db.sqlite3
djangogramm/djangogramm/: asgi.py  settings.py  urls.py  wsgi.py
djangogramm/gramm/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
djangogramm/gramm/management/commands/: create_fake_data.py
djangogramm/gramm/migrations/: 0001_initial.py  0002_authorfollower.py  0003_alter_image_image_alter_user_avatar.py  0004_alter_image_image_alter_user_avatar.py
djangogramm/gramm/templates/gramm/: base.html  create_post.html  feed.html  followers.html  followings.html  home.html  pagination.html  profile_edit.html  profile_user.html
djangogramm/gramm/templates/registration/: confirm_email.html  invalid_verify.html  login.html  register.html  verify_email.html
djangogramm/gramm/tests/: test_authentication.py  test_forms.py  test_urls.py  test_views.py
djangogramm/static/: style.css
